--- a/hub/migrations/templates/music.html
+++ b/hub/migrations/templates/music.html
@@ -4,8 +4,10 @@
 {% block content %}
 
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Montserrat:wght@400;700&display=swap');
+
     body {
-        font-family: 'Arial', sans-serif; 
+        font-family: 'Lora', 'Arial', sans-serif; 
         background-color: #f9f9f9; 
     }
     
@@ -20,13 +22,14 @@
     }
 
     .music-content-title {
-        font-family: 'Georgia', serif; 
+        font-family: 'Montserrat', sans-serif; 
         color: #AA336A; 
         font-size: 40px; 
         margin-bottom: 30px; 
     }
 
     .music-content-description {
+        font-family: 'Lora', serif;
         font-size: 18px; 
         line-height: 1.6; 
         margin-bottom: 30px; 
@@ -71,6 +74,7 @@
     </p>
 </div>
 
+
 {% endblock %}
 
 {% block extra_js %}
@@ -78,5 +82,3 @@
 <script src="{% static 'js/chat-modal.js' %}"></script>
 
 {% endblock extra_js %}
-
-
