--- a/hub/migrations/templates/base.html
+++ b/hub/migrations/templates/base.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IVOC</title>
+
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
@@ -150,7 +152,8 @@
             text-decoration: none;
             color: #000;
             font-weight: normal;
-            font-size: 20px;
+            font-size: 18px;
+            font-family: 'Montserrat', sans-serif;
         }
 
         .right-section ul li a:hover {
@@ -191,6 +194,7 @@
             padding: 5px 0;
             padding-top: 15px;
             padding-bottom: 30px;
+            font-family: 'Montserrat', sans-serif;
         }
 
         .footer p {
@@ -323,8 +327,8 @@
             width: 50%; 
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
             border-radius: 10px; 
-            max-height: 80vh; /* Maximum height to enable scrolling */
-            overflow-y: auto; /* Enable vertical scrolling */
+            max-height: 80vh; 
+            overflow-y: auto; 
         }
 
         .close {
@@ -497,7 +501,7 @@
             min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 1;
-            left: auto;  /* Default left position */
+            left: auto;  
             right: 0;
         }
 
@@ -664,6 +668,7 @@
         }
 
         @media (max-width: 1024px) {
+
             .right-section ul {
                 display: none;
             }
@@ -711,6 +716,7 @@
         }
 
         @media (min-width: 1025px) {
+
             .socialmedia-dropdown-desktop {
                 display: block;
             }
@@ -745,7 +751,6 @@
                     <div>
                         <a href="#chatModal" class="chat-button">Chat</a>
                     </div>  
-
                     <a href="https://ivocforyouth.com/checkout/donate?donatePageId=659a21b0dce9430958c77663" class="support-button">Donate</a>
                 </div>
 
@@ -815,7 +820,6 @@
             <ul>
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'about' %}">About</a></li>
-
                 <li class="dropdown-mobile">
                     <a href="javascript:void(0)" onclick="toggleDropdown(this, event)">Meet Our Team</a>
                     <div class="dropdown-content-mobile">
@@ -830,8 +834,6 @@
                         <a href="{% url 'photoANDvideo' %}">Photo & Video</a>
                     </div>
                 </li>
-                
-
                 <li><a href="{% url 'connect' %}">Connect</a></li>
                 <li><a href="{% url 'donate' %}">Support Us</a></li>
             </ul>
@@ -913,11 +915,9 @@
                 <div class="form-group button-container">
                     <button type="submit" class="submit-button">Send Message</button>
                 </div>
-
-                </form>
-            </div>
+            </form>
         </div>
-
+    </div>
 
     <script src="{% static 'js/hamburger.js' %}"></script>
 
