--- a/hub/migrations/templates/photoANDvideo.html
+++ b/hub/migrations/templates/photoANDvideo.html
@@ -3,8 +3,10 @@
 
 {% block content %}
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Montserrat:wght@400;700&display=swap');
+
     body {
-        font-family: 'Arial', sans-serif; 
+        font-family: 'Lora', 'Arial', sans-serif; 
         background-color: #f9f9f9; 
     }
     
@@ -19,13 +21,14 @@
     }
 
     .PV-content-title {
-        font-family: 'Georgia', serif; 
+        font-family: 'Montserrat', sans-serif; 
         color: #AA336A; 
         font-size: 40px; 
         margin-bottom: 30px; 
     }
 
     .PV-content-description {
+        font-family: 'Lora', serif;
         font-size: 18px; 
         line-height: 1.6; 
         margin-bottom: 30px; 
