--- a/hub/migrations/templates/about.html
+++ b/hub/migrations/templates/about.html
@@ -107,6 +107,13 @@
         margin: 0 0 10px 20px;
     }
 
+    @media (max-width: 1024px) {
+        .about-quote {
+            margin-bottom: 15%;
+        }
+    }
+
+
     @media only screen and (max-width: 768px) {
         .section {
             margin: 10px 0;
