--- a/hub/migrations/templates/connect.html
+++ b/hub/migrations/templates/connect.html
@@ -113,6 +113,12 @@
         padding-top: 15px;
     }
 
+    @media (max-width: 1024px) {
+        .connect-info {
+            margin-bottom: 15%;
+        }
+    }
+
     @media (max-width: 768px) {
         .connect-me {
             font-size: 18px;
