--- a/hub/migrations/templates/logout.html
+++ b/hub/migrations/templates/logout.html
@@ -42,10 +42,29 @@
         color: #333;
     }
 
+    @media (max-width: 1024px) {
+        .logout-container {
+            margin: 50px auto;
+            padding: 15px;
+            margin-top: 25%;
+            margin-bottom: 50%;
+        }
+    }
+
+    @media (max-width: 820px) {
+        .logout-container {
+            margin: 50px auto;
+            padding: 15px;
+            margin-top: 20%;
+            margin-bottom: 48%;
+        }
+    }
+
     @media (max-width: 768px) {
         .logout-container {
-            margin: 20px;
+            margin: 50px auto;
             padding: 15px;
+            margin-bottom: 37%;
         }
 
         .logout-message {
@@ -65,7 +84,39 @@
             font-size: 1.5rem;
         }
     }
+
+    @media (max-width: 480px) {
+        .logout-container {
+            margin: 10px;
+            padding: 10px;
+            margin-top: 20%;
+            margin-bottom: 37%;
+        }
+
+        .logout-message {
+            margin-bottom: 10px;
+        }
+
+        .action-links {
+            margin-top: 10px;
+        }
+
+        .action-links a {
+            margin: 3px 0;
+            display: block;
+            font-size: 0.9rem;
+        }
+
+        h2 {
+            font-size: 1.2rem;
+        }
+
+        h3 {
+            font-size: 1rem;
+        }
+    }
 </style>
+
 <br>
 <br>
 <br>
@@ -83,6 +134,12 @@
    </div>
 </div>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+
 {% endblock content %}
 
 {% block extra_js %}
@@ -90,4 +147,3 @@
 <script src="{% static 'js/chat-modal.js' %}"></script>
 
 {% endblock extra_js %}
-
