--- a/hub/migrations/templates/photoANDvideo.html
+++ b/hub/migrations/templates/photoANDvideo.html
@@ -35,10 +35,26 @@
         color: #333; 
     }
 
+    @media (max-width: 1024px) {
+        .PV-content-area {
+            margin-top: 15%;
+            margin-bottom: 50%;
+        }
+    }
+
+    @media (max-width: 820px) {
+        .PV-content-area {
+            margin-top: 15%;
+            margin-bottom: 33%;
+        }
+    }
+
     @media (max-width: 768px) {
         .PV-content-area {
             padding: 20px; 
             margin: 40px auto; 
+            margin-bottom: 35%;
+            margin-top: 10%;
         }
 
         .PV-content-title {
