--- a/hub/migrations/templates/login.html
+++ b/hub/migrations/templates/login.html
@@ -61,10 +61,25 @@
         text-decoration: underline;
     }
 
+    @media (max-width: 1024px) {
+        .login-container {
+            margin-top: 10%;
+            margin-bottom: 37%;
+        }
+    }
+
+    @media (max-width: 820px) {
+        .login-container {
+            margin-top: 10%;
+            margin-bottom: 23%;
+        }
+    }
+
     @media (max-width: 768px) {
         .login-container {
             margin: 20px;
             padding: 15px;
+            margin-bottom: 15%;
         }
 
         form p {
@@ -79,6 +94,15 @@
             font-size: 1.5rem;
         }
     }
+
+    @media (max-width: 480px) {
+        .signup-container p{
+            margin-right: 0%;
+        }
+
+
+    }
+
 </style>
 <br>
 <br>
