--- a/hub/migrations/templates/music.html
+++ b/hub/migrations/templates/music.html
@@ -36,10 +36,26 @@
         color: #333; 
     }
 
+    @media (max-width: 1024px) {
+        .music-content-area {
+            margin-top: 15%;
+            margin-bottom: 38%;
+        }
+    }
+
+    @media (max-width: 820px) {
+        .music-content-area {
+            margin-top: 10%;
+            margin-bottom: 30%;
+        }
+    }
+
     @media (max-width: 768px) {
         .music-content-area {
             padding: 20px; 
             margin: 40px auto; 
+            margin-top: 10%;
+            margin-bottom: 25%;
         }
 
         .music-content-title {
@@ -73,7 +89,6 @@
         Connect with us to find out more.
     </p>
 </div>
-
 
 {% endblock %}
 
