--- a/hub/migrations/templates/register.html
+++ b/hub/migrations/templates/register.html
@@ -38,10 +38,26 @@
         color: red; 
     }
 
+
+    @media (max-width: 1024px) {
+        .register-container {
+            margin-top: 10%;
+            margin-bottom: 30%;
+        }
+    }
+
+    @media (max-width: 820px) {
+        .register-container {
+            margin-top: 7%;
+            margin-bottom: 20%;
+        }
+    }
+
     @media (max-width: 768px) {
         .register-container {
             margin: 20px;
             padding: 15px;
+            margin-bottom: 5%;
         }
 
         form div {
