docker setup update

--- a/hub/migrations/templates/about.html
+++ b/hub/migrations/templates/about.html
@@ -148,8 +148,8 @@
     @media (max-width: 480px) {
         .image-right {
             width: 50%;
-            max-width: 80%; /* Further reduce size on smaller screens */
-            margin: 0 auto; /* Center the image */
+            max-width: 80%; 
+            margin: 0 auto; 
             margin-left: 25%;
             margin-bottom: 5%;
         }
