--- a/hub/migrations/templates/login.html
+++ b/hub/migrations/templates/login.html
@@ -45,7 +45,7 @@
     }
 
     .signup-container p {
-        margin-right: -100px; /* Adjust this value to control the spacing */
+        margin-right: -100px; 
     }
 
     .login-container p {
