--- a/hub/migrations/templates/base.html
+++ b/hub/migrations/templates/base.html
@@ -801,7 +801,7 @@
                     <div>
                         <a href="#chatModal" class="chat-button">Chat</a>
                     </div>  
-                    <a href="https://ivocforyouth.com/checkout/donate?donatePageId=659a21b0dce9430958c77663" class="support-button">Donate</a>
+                    <a href="https://buy.stripe.com/5kAdT5gHl7ve4WA000" class="support-button" target="_blank">Donate</a>
                 </div>
 
                 <div class="right-section">
@@ -822,6 +822,7 @@
                             <div class="dropdown-content">
                                 <a href="{% url 'music' %}">Music</a>
                                 <a href="{% url 'photoANDvideo' %}">Photo & Video</a>
+                                <a href="{% url 'services' %}">Counseling Services</a>
                             </div>
                         </li>
 
