--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -448,7 +448,7 @@
             <p>Join us in making a meaningful impact today!</p>
         </div>
             <br>
-        <a href="https://ivocforyouth.com/checkout/donate?donatePageId=659a21b0dce9430958c77663" class="supportus-button">Donate to IVOC here</a>
+        <a href="https://buy.stripe.com/5kAdT5gHl7ve4WA000" class="supportus-button" target="_blank">Donate to IVOC here</a>
     </div>
 </div>
 <br>
