--- a/hub/migrations/templates/base.html
+++ b/hub/migrations/templates/base.html
@@ -872,25 +872,23 @@
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'about' %}">About</a></li>
                 <li class="dropdown-mobile">
-                    <a href="javascript:void(0)" onclick="toggleDropdown(this, event)">Meet Our Team</a>
+                    <a href="javascript:void(0)" onclick="toggleDropdown(event)">Meet Our Team</a>
                     <div class="dropdown-content-mobile">
                         <a href="{% url 'president' %}">President</a>
                         <a href="{% url 'counselors' %}">Staff</a>
                     </div>
                 </li>
                 <li class="dropdown-mobile">
-                    <a href="javascript:void(0)" onclick="toggleDropdown(this, event)">Programs</a>
+                    <a href="javascript:void(0)" onclick="toggleDropdown(event)">Programs</a>
                     <div class="dropdown-content-mobile">
                         <a href="{% url 'music' %}">Music</a>
                         <a href="{% url 'photoANDvideo' %}">Photo & Video</a>
+                        <a href="{% url 'services' %}">Counseling Services</a>
                     </div>
                 </li>
                 <li><a href="{% url 'connect' %}">Connect</a></li>
                 <li><a href="{% url 'donate' %}">Support Us</a></li>
             </ul>
-
-
-
                 <div class="socialmedia-dropdown socialmedia-dropdown-mobile">
                     <a href="mailto:info@ivocforyouth.com" target="_blank" title="Email Us">
                         <i class="bi bi-envelope-fill email-icon"></i>
@@ -908,8 +906,6 @@
                         <i class="bi bi-youtube youtube-icon"></i>
                     </a>
                 </div>
-            
-            </ul>
         </div>
 
         <div id="content" class="clearfix">
