Counseling services updated

--- a/hub/migrations/templates/counselors.html
+++ b/hub/migrations/templates/counselors.html
@@ -158,7 +158,7 @@
             <img src="{% static 'images/Angelina.jpg' %}" alt="Angelina Headshot"/>
         </div>
         <div class="counselor-description">
-        <p>Undergraduate Student at Clark University.</p>
+        <p>Undergraduate student at Clark University.</p>
         </div>
     </div>
 </div> 
