Fix images/videos hosting issue

--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -1127,7 +1127,7 @@ body, p {
 
 <div class="responsive-video">
     <video width= 100% height= 900px autoplay loop muted>
-        <source src="{% static 'images/Video.mp4' %}" type="video/mp4">
+        <source src="https://ivoc.nyc3.digitaloceanspaces.com/ivoc/Video.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
@@ -1243,7 +1243,7 @@ body, p {
     </div>
     <div class="video-block">
         <video width="320" height="240" controls poster="{% static 'images/ProjectThumbnail.jpg' %}">
-        <source src="{% static 'images/Project.mp4' %}" type="video/mp4">
+        <source src="https://ivoc.nyc3.digitaloceanspaces.com/ivoc/Project.mp4" type="video/mp4">
         Your browser does not support the video tag.
         </video>
         <p></p>
