Fix images/videos hosting issue

--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -1161,7 +1161,7 @@ body, p {
 <br>
 <div class="homepage-video">
     <video width= 1100px height= 650px autoplay muted loop controls>
-        <source src="{% static 'images/IVOC Upstream Initiative.mp4' %}" type="video/mp4">
+        <source src="https://ivoc.nyc3.digitaloceanspaces.com/ivoc/IVOC Upstream Initiative.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </div>
@@ -1188,7 +1188,7 @@ body, p {
     <br>
     <div class="homepage-video">
         <video width= 1100px height= 650px controls controls poster="{% static 'images/birthThumbnail.jpg' %}">
-            <source src="{% static 'images/The birth of IVOC.mp4' %}" type="video/mp4">
+            <source src="https://ivoc.nyc3.digitaloceanspaces.com/ivoc/The birth of IVOC.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
@@ -1235,7 +1235,7 @@ body, p {
 <div class="video-container">
     <div class="video-block">
         <video width="320" height="240" controls poster="{% static 'images/SummerThumbnail.jpg' %}">
-        <source src="{% static 'images/IVOCSummer.mp4' %}" type="video/mp4">
+        <source src="https://ivoc.nyc3.digitaloceanspaces.com/ivoc/IVOCSummer.mp4" type="video/mp4">
         Your browser does not support the video tag.
         </video>
         <p></p>
@@ -1254,7 +1254,7 @@ body, p {
 <div class="video-container">
     <div class="video-block">
         <video width="320" height="240" controls poster="{% static 'images/PromiseThumbnail.jpg' %}">
-        <source src="{% static 'images/Our Promise.mp4' %}" type="video/mp4">
+        <source src="https://ivoc.nyc3.digitaloceanspaces.com/ivoc/Our Promise.mp4" type="video/mp4">
         Your browser does not support the video tag.
         </video>
         <p></p>
@@ -1262,7 +1262,7 @@ body, p {
     </div>
     <div class="video-block">
         <video width="320" height="240" controls poster="{% static 'images/ThumbnailTestimonial.png' %}">
-        <source src="{% static 'images/Testimonials.mp4' %}" type="video/mp4">
+        <source src="https://ivoc.nyc3.digitaloceanspaces.com/ivoc/Testimonials.mp4" type="video/mp4">
         Your browser does not support the video tag.
         </video>
         <p></p>
