--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -1126,7 +1126,7 @@ body, p {
 {% endif %}
 
 <div class="responsive-video">
-    <video width= 100% height= 900px autoplay loop muted>
+    <video width= 100% height= 900px autoplay loop muted playsinline>
         <source src="https://ivoc.nyc3.digitaloceanspaces.com/ivoc/Video.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
