--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -1160,7 +1160,7 @@ body, p {
 <br>
 <br>
 <div class="homepage-video">
-    <video width= 1100px height= 650px autoplay muted loop controls>
+    <video width= 1100px height= 650px autoplay muted loop controls playsinline>
         <source src="https://ivoc.nyc3.digitaloceanspaces.com/ivoc/IVOC Upstream Initiative.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
