Fix images/videos hosting issue

--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -1187,7 +1187,7 @@ body, p {
     <p style="font-family: 'Montserrat', sans-serif;"><b>Our Why:</b> The conversation that changed everything. The birth of IVOC happened when we finally started listening to our youth.</p>
     <br>
     <div class="homepage-video">
-        <video width= 1100px height= 650px controls controls poster="{% static 'images/birthThumbnail.jpg' %}">
+        <video width= 1100px height= 650px controls controls playsinline poster="{% static 'images/birthThumbnail.jpg' %}">
             <source src="https://ivoc.nyc3.digitaloceanspaces.com/ivoc/The birth of IVOC.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
@@ -1234,7 +1234,7 @@ body, p {
 
 <div class="video-container">
     <div class="video-block">
-        <video width="320" height="240" controls poster="{% static 'images/SummerThumbnail.jpg' %}">
+        <video width="320" height="240" controls playsinline poster="{% static 'images/SummerThumbnail.jpg' %}">
         <source src="https://ivoc.nyc3.digitaloceanspaces.com/ivoc/IVOCSummer.mp4" type="video/mp4">
         Your browser does not support the video tag.
         </video>
@@ -1242,7 +1242,7 @@ body, p {
         <p class="video-description" style="font-family: 'Lora', serif;"><b>Event: <i>Summer Jumpoff</i></b> - IVOC's inaugural youth showcase was a night to remember! We saw our students shine as they performed songs and showcased videos they created as a part of IVOC.’s music and videography programs in Worcester, MA.</p>
     </div>
     <div class="video-block">
-        <video width="320" height="240" controls poster="{% static 'images/ProjectThumbnail.jpg' %}">
+        <video width="320" height="240" controls playsinline poster="{% static 'images/ProjectThumbnail.jpg' %}">
         <source src="https://ivoc.nyc3.digitaloceanspaces.com/ivoc/Project.mp4" type="video/mp4">
         Your browser does not support the video tag.
         </video>
@@ -1253,7 +1253,7 @@ body, p {
 
 <div class="video-container">
     <div class="video-block">
-        <video width="320" height="240" controls poster="{% static 'images/PromiseThumbnail.jpg' %}">
+        <video width="320" height="240" controls playsinline poster="{% static 'images/PromiseThumbnail.jpg' %}">
         <source src="https://ivoc.nyc3.digitaloceanspaces.com/ivoc/Our Promise.mp4" type="video/mp4">
         Your browser does not support the video tag.
         </video>
@@ -1261,7 +1261,7 @@ body, p {
         <p class="video-description" style="font-family: 'Lora', serif;"><b>Project: <i>Our Promise</i></b> - A collaborative production between IVOC Youth, Votary Films, and Family Health Center of Worcester (FHCW), “Our Promise” is based on FHCW’s mission to support and inspire up and coming professionals of color, by providing internship and mentorship opportunities.</p>
     </div>
     <div class="video-block">
-        <video width="320" height="240" controls poster="{% static 'images/ThumbnailTestimonial.png' %}">
+        <video width="320" height="240" controls playsinline poster="{% static 'images/ThumbnailTestimonial.png' %}">
         <source src="https://ivoc.nyc3.digitaloceanspaces.com/ivoc/Testimonials.mp4" type="video/mp4">
         Your browser does not support the video tag.
         </video>
