Fix button hover color

--- a/hub/migrations/templates/base.html
+++ b/hub/migrations/templates/base.html
@@ -105,7 +105,7 @@
         }
 
         .button:hover, .chat-button:hover {
-            background-color: darkgrey;
+            background-color: #cf6094;
             text-decoration: none;
         }
 
@@ -121,7 +121,7 @@
         }
 
         .chat-button:hover {
-            background-color: darkgrey;
+            background-color: #cf6094;
         }
 
         .login-link, .signup-link {
@@ -384,7 +384,7 @@
         }
 
         .chat-form button.submit-button:hover {
-            background-color: darkgrey;
+            background-color: #cf6094;
         }
 
         .chat-form .button-container {
@@ -444,7 +444,7 @@
         }
 
         .support-button:hover {
-            background-color: darkgrey;
+            background-color: #cf6094;
         }
 
         .support-button:focus {
