--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -138,7 +138,7 @@ body, p {
 }
 
 .getintouch-button:hover {
-    background-color: gray;
+    background-color: rgb(164, 162, 162);
 }
 
 .black-textbox {
@@ -232,7 +232,7 @@ body, p {
 }
 
 .donate-button:hover {
-    background-color: darkgrey;
+    background-color: #cf6094;
 }
 
 .homepage-text {
@@ -360,7 +360,7 @@ body, p {
 }
 
 .getintouch:hover {
-    background-color: darkgrey; 
+    background-color: #cf6094; 
 }
 
 .pink-line-top {
