Fix button hover color

--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -112,7 +112,7 @@
     }
 
     .supportus-button:hover {
-        background-color: darkgrey;
+        background-color: #cf6094;
     }
 
     .donation-center {
