Fix button hover color

--- a/hub/migrations/templates/base.html
+++ b/hub/migrations/templates/base.html
@@ -107,6 +107,7 @@
         .button:hover, .chat-button:hover {
             background-color: #cf6094;
             text-decoration: none;
+            color: white;
         }
 
         .button:focus, .chat-button:focus {
@@ -445,6 +446,7 @@
 
         .support-button:hover {
             background-color: #cf6094;
+            color: white;
         }
 
         .support-button:focus {
