Fix button hover color

--- a/hub/migrations/templates/base.html
+++ b/hub/migrations/templates/base.html
@@ -123,6 +123,7 @@
 
         .chat-button:hover {
             background-color: #cf6094;
+            color: white;
         }
 
         .login-link, .signup-link {
@@ -386,6 +387,7 @@
 
         .chat-form button.submit-button:hover {
             background-color: #cf6094;
+            color: white;
         }
 
         .chat-form .button-container {
