--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -139,6 +139,7 @@ body, p {
 
 .getintouch-button:hover {
     background-color: rgb(164, 162, 162);
+    color: black;
 }
 
 .black-textbox {
@@ -233,6 +234,7 @@ body, p {
 
 .donate-button:hover {
     background-color: #cf6094;
+    color: white;
 }
 
 .homepage-text {
@@ -361,6 +363,7 @@ body, p {
 
 .getintouch:hover {
     background-color: #cf6094; 
+    color: white;
 }
 
 .pink-line-top {
