Fix button hover color

--- a/hub/migrations/templates/services.html
+++ b/hub/migrations/templates/services.html
@@ -51,6 +51,7 @@
     .email-button:hover {
         background-color: darkgray;
         transform: translateY(-3px);
+        color: white;
     }
 
     .content-image {
