--- a/hub/migrations/templates/connect.html
+++ b/hub/migrations/templates/connect.html
@@ -96,6 +96,7 @@
     .email-button:hover {
         background-color: rgb(225, 219, 219);
         border-color: #333;
+        color: black;
     }
 
     .connect-info {
