Fix button hover color

--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -248,6 +248,7 @@
         border: 1px solid #AA336A;
         z-index: 2;
         margin: 0;
+        outline: none;
     }
 
     button.next {
@@ -261,6 +262,7 @@
     button.prev:hover, button.next:hover {
         background-color: #AA336A;
         color: white;
+        outline: none;
     }
 
     .donation-impact {
