Fix button hover color

--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -323,6 +323,7 @@
         background-color: #f9f9f9;
         border: 1px solid #AA336A;
         z-index: 2;
+        outline: none;
     }
 
     button.custom-next-slide {
@@ -336,6 +337,7 @@
     button.custom-prev-slide:hover, button.custom-next-slide:hover {
         background-color: #AA336A;
         color: white;
+        outline: none;
     }
 
     @media (max-width: 1024px) {
