--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -296,6 +296,7 @@ body, p {
     line-height: 60px; 
     text-align: center; 
     z-index: 10;
+    outline: none;
 }
 
 .prev {
@@ -503,6 +504,7 @@ body, p {
         background-color: white;
         color: #AA336A;
         text-align: center;
+        outline: none;
     }
 
     .prev {
@@ -865,6 +867,7 @@ body, p {
         background-color: white;
         color: #AA336A;
         text-align: center;
+        outline: none;
     }
 
     .prev {
@@ -1034,6 +1037,7 @@ body, p {
         background-color: white;
         color: #AA336A;
         text-align: center;
+        outline: none;
     }
 
     .prev {
