Fix button hover color

--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -167,6 +167,7 @@
         padding: 10px;
         border-radius: 50%;
         z-index: 10;
+        outline: none;
     }
 
     .carousel-prev-slide {
@@ -394,6 +395,7 @@
 
         button.carousel-prev-slide, button.carousel-next-slide {
             display: none; 
+            outline: none;
         }    
 }
 </style>
