--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -691,6 +691,7 @@ body, p {
         background-color: white;
         color: #AA336A;
         text-align: center;
+        outline: none;
     }
 
     .prev {
