Fix button hover color

--- a/hub/migrations/templates/home.html
+++ b/hub/migrations/templates/home.html
@@ -1207,7 +1207,7 @@ body, p {
 <br>
 
 <div class="slider">
-    <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
+    <button class="prev" onclick="changeSlide(-1)" style="outline: none;">&#10094;</button>
     <div class="slides-container">
         <div class="slide" id="slide1">
             <p style="font-family: 'Lora', serif;">"The thing I like about IVOC is how the whole thing is just expressing yourself with music and words. It feels like a safe place where you aren't judged"</p>
@@ -1230,7 +1230,7 @@ body, p {
             <p class="format-home">Testimonials from our participants</p>
         </div>
     </div>
-    <button class="next" onclick="changeSlide(1)">&#10095;</button>
+    <button class="next" onclick="changeSlide(1)" style="outline: none;">&#10095;</button>
 </div>
 
 <br>
