Fix button hover color

--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -477,8 +477,8 @@
             <img src="{% static 'images/e.png' %}" alt="IVOC Visual 5" class="carousel-image">
         </div>
     </div>
-    <button class="carousel-prev-slide">&#10094;</button>
-    <button class="carousel-next-slide">&#10095;</button>
+    <button class="carousel-prev-slide" style="outline: none;">&#10094;</button>
+    <button class="carousel-next-slide" style="outline: none;">&#10095;</button>
 </div>
 
 <br>
