--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -459,27 +459,27 @@
     </div>
 </div>
 <br>
-<div class="center-mode-carousel">
-    <div class="carousel-container">
-        <div class="carousel-slide">
-            <img src="{% static 'images/a.png' %}" alt="IVOC Visual 1" class="carousel-image">
+
+<div id="carouselExample" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="{% static 'images/a.png' %}" class="d-block w-100" alt="Slide 1">
         </div>
-        <div class="carousel-slide active">
-            <img src="{% static 'images/b.png' %}" alt="IVOC Visual 2" class="carousel-image">
+        <div class="carousel-item">
+            <img src="{% static 'images/b.png' %}" class="d-block w-100" alt="Slide 2">
         </div>
-        <div class="carousel-slide">
-            <img src="{% static 'images/c.png' %}" alt="IVOC Visual 3" class="carousel-image">
+        <div class="carousel-item">
+            <img src="{% static 'images/c.png' %}" class="d-block w-100" alt="Slide 3">
         </div>
-        <div class="carousel-slide">
-            <img src="{% static 'images/d.png' %}" alt="IVOC Visual 4" class="carousel-image">
+        <div class="carousel-item">
+            <img src="{% static 'images/d.png' %}" class="d-block w-100" alt="Slide 4">
         </div>
-        <div class="carousel-slide">
-            <img src="{% static 'images/e.png' %}" alt="IVOC Visual 5" class="carousel-image">
+        <div class="carousel-item">
+            <img src="{% static 'images/e.png' %}" class="d-block w-100" alt="Slide 5">
         </div>
     </div>
-    <button class="carousel-prev-slide" style="outline: none;">&#10094;</button>
-    <button class="carousel-next-slide" style="outline: none;">&#10095;</button>
 </div>
+
 
 <br>
 <br>
