--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -457,27 +457,34 @@
 </div>
 <br>
 
-<div class="center-mode-carousel">
-    <button class="carousel-prev-slide">&#10094;</button>
-    <div class="carousel-container">
-        <div class="carousel-slide">
-            <img src="{% static 'images/a.png' %}" alt="Slide 1">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="{% static 'images/a.png' %}" alt="First slide">
         </div>
-        <div class="carousel-slide">
-            <img src="{% static 'images/b.png' %}" alt="Slide 2">
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'images/b.png' %}" alt="Second slide">
         </div>
-        <div class="carousel-slide">
-            <img src="{% static 'images/c.png' %}" alt="Slide 3">
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'images/c.png' %}" alt="Third slide">
         </div>
-        <div class="carousel-slide">
-            <img src="{% static 'images/d.png' %}" alt="Slide 4">
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'images/d.png' %}" alt="Fourth slide">
         </div>
-        <div class="carousel-slide">
-            <img src="{% static 'images/e.png' %}" alt="Slide 5">
+        <div class="carousel-item">
+            <img class="d-block w-100" src="{% static 'images/e.png' %}" alt="Fifth slide">
         </div>
     </div>
-    <button class="carousel-next-slide">&#10095;</button>
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
+
 
 
 
@@ -488,6 +495,10 @@
 {% endblock %}
 
 {% block extra_js %}
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 <script src="{% static 'js/chat-modal.js' %}"></script>
 <script src="{% static 'js/donate-bar.js' %}"></script>
