--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -173,6 +173,12 @@
     right: 10px;
 }
 
+.carousel-inner img {
+    width: 200px; /* Set a smaller width for the images */
+    height: auto; /* Maintain aspect ratio */
+    margin: auto; /* Center the images */
+}
+
 
 
     .progress-container {
@@ -460,19 +466,19 @@
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="{% static 'images/a.png' %}" alt="First slide">
+            <img class="d-block" src="{% static 'images/a.png' %}" alt="First slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'images/b.png' %}" alt="Second slide">
+            <img class="d-block" src="{% static 'images/b.png' %}" alt="Second slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'images/c.png' %}" alt="Third slide">
+            <img class="d-block" src="{% static 'images/c.png' %}" alt="Third slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'images/d.png' %}" alt="Fourth slide">
+            <img class="d-block" src="{% static 'images/d.png' %}" alt="Fourth slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'images/e.png' %}" alt="Fifth slide">
+            <img class="d-block" src="{% static 'images/e.png' %}" alt="Fifth slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
@@ -484,6 +490,7 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+
 
 
 
