--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -179,7 +179,9 @@
     margin: auto; /* Center the images */
 }
 
-
+.carousel-item {
+    margin: 0 10px; /* Decrease the space between the slides */
+}
 
 
 
@@ -484,14 +486,15 @@
         </div>
     </div>
     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span aria-hidden="true">&lt;</span> <!-- Left arrow -->
         <span class="sr-only">Previous</span>
     </a>
     <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span aria-hidden="true">&gt;</span> <!-- Right arrow -->
         <span class="sr-only">Next</span>
     </a>
 </div>
+
 
 
 
