--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -180,7 +180,7 @@
 }
 
 .carousel-item {
-    margin: 0 10px; /* Decrease the space between the slides */
+    margin: 0px; /* Decrease the space between the slides */
 }
 
 
@@ -486,11 +486,11 @@
         </div>
     </div>
     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-        <span aria-hidden="true">&lt;</span> <!-- Left arrow -->
+        <span aria-hidden="true" style="color: #AA336A;">&lt;</span> <!-- Left arrow -->
         <span class="sr-only">Previous</span>
     </a>
     <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-        <span aria-hidden="true">&gt;</span> <!-- Right arrow -->
+        <span aria-hidden="true" style="color: #AA336A;">&gt;</span> <!-- Right arrow -->
         <span class="sr-only">Next</span>
     </a>
 </div>
