--- a/hub/migrations/templates/donate.html
+++ b/hub/migrations/templates/donate.html
@@ -179,8 +179,50 @@
     margin: auto; /* Center the images */
 }
 
+.carousel-inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.5s ease-in-out;
+}
+
 .carousel-item {
-    margin: 0px; /* Decrease the space between the slides */
+    flex: 0 0 33.33%; /* Each slide takes up 1/3 of the carousel width */
+    transition: transform 0.5s ease-in-out;
+    padding: 0 10px; /* Reduce space between slides */
+}
+
+.carousel-item img {
+    width: 100%; /* Adjust width to fill the container */
+    height: auto;
+    border-radius: 8px;
+}
+
+.carousel-item.active {
+    transform: scale(1.2); /* Slightly enlarge the active (center) slide */
+}
+
+.carousel-item-next, .carousel-item-prev {
+    transform: scale(0.9); /* Reduce size of non-active slides */
+}
+
+.carousel-control-prev, .carousel-control-next {
+    background-color: black; /* Black background */
+    border-radius: 50%; /* Circular shape */
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.carousel-control-prev span, .carousel-control-next span {
+    color: white; /* White arrow icons */
+    font-size: 24px; /* Size of the arrow icons */
+}
+
+.carousel-control-prev:hover, .carousel-control-next:hover {
+    background-color: #333; /* Darker background on hover */
 }
 
 
@@ -470,30 +512,31 @@
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block" src="{% static 'images/a.png' %}" alt="First slide">
+            <img src="{% static 'images/a.png' %}" alt="First slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block" src="{% static 'images/b.png' %}" alt="Second slide">
+            <img src="{% static 'images/b.png' %}" alt="Second slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block" src="{% static 'images/c.png' %}" alt="Third slide">
+            <img src="{% static 'images/c.png' %}" alt="Third slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block" src="{% static 'images/d.png' %}" alt="Fourth slide">
+            <img src="{% static 'images/d.png' %}" alt="Fourth slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block" src="{% static 'images/e.png' %}" alt="Fifth slide">
+            <img src="{% static 'images/e.png' %}" alt="Fifth slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-        <span aria-hidden="true" style="color: #AA336A;">&lt;</span> <!-- Left arrow -->
+        <span aria-hidden="true">&lt;</span>
         <span class="sr-only">Previous</span>
     </a>
     <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-        <span aria-hidden="true" style="color: #AA336A;">&gt;</span> <!-- Right arrow -->
+        <span aria-hidden="true">&gt;</span>
         <span class="sr-only">Next</span>
     </a>
 </div>
+
 
 
 
